<resources>
    <string name="app_name">AndroidSubmarine</string>

    <string name="title_activity_start">AndroidSubmarine</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_image_display_name">Image Server Image Url</string>
    <string name="pref_title_light_display_name">Image Server Light Url</string>
    <string name="pref_title_right_display_name">Right ON Kick Server Url</string>
    <string name="pref_title_right_off_display_name">Right OFF Kick Server Url</string>
    <string name="pref_title_left_display_name">Left ON Kick Server Url</string>
    <string name="pref_title_left_off_display_name">Left OFF Kick Server Url</string>
    <string name="pref_default_display_name">http://192.168.38.58:8080/cam.jpg?pwd=</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="server_url_image_string">server_image</string>
    <string name="server_url_right_string">server_right</string>
    <string name="server_url_left_string">server_left</string>
    <string name="server_url_light_string">server_light</string>
    <string name="server_url_right_off_string">server_right_off</string>
    <string name="server_url_left_off_string">server_left_off</string>
</resources>
